--- a/src/sample/home.fxml
+++ b/src/sample/home.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="391.0" style="-fx-background-color: #18ffff;">
          <children>
@@ -47,5 +47,6 @@
       <JFXTextField labelFloat="true" layoutX="436.0" layoutY="135.0" promptText="username" unFocusColor="#0d0d0d" />
       <FontAwesomeIconView glyphName="USER" glyphStyle="USER" layoutX="409.0" layoutY="154.0" size="20" wrappingWidth="40.2857141494751" />
       <JFXPasswordField labelFloat="true" layoutX="436.0" layoutY="194.0" promptText="password" unFocusColor="#c31717" />
+      <FontAwesomeIconView glyphName="UNLOCK_ALT" glyphStyle="USER" layoutX="409.0" layoutY="213.0" size="20" wrappingWidth="40.2857141494751" />
    </children>
 </AnchorPane>
